Ensure menu covers windows

--- a/front/src/desktop/Windows/windows.module.css
+++ b/front/src/desktop/Windows/windows.module.css
@@ -2,7 +2,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  z-index: 5000;
+  z-index: 4000;
   pointer-events: none;
 }
 
